cambios de titile, iconos, tooltip

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <!-- Configuracion base de caracteres para compatibilidad -->
     <meta charset="UTF-8" />
-    <!-- Icono del sitio en formato vectorial -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Icono del sitio -->
+    <link rel="icon" type="image/png" href="./img/logo.png" />
     <!-- Descripcion para buscadores y resultados organicos -->
     <meta
       name="description"
@@ -24,7 +24,7 @@
     <!-- Configuracion responsive para dispositivos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Titulo principal de la pagina -->
-    <title>Estudio Juridico Canevaro | Abogados en Argentina</title>
+    <title>Tucuman abogados</title>
     <!-- Precarga de fuentes para mejorar rendimiento -->
     <link
       rel="preconnect"
